fix transmission player align

--- a/resources/css/chat.css
+++ b/resources/css/chat.css
@@ -240,7 +240,6 @@ input[type="text"] {
     justify-content: flex-end;
     align-items: center;
     padding: 0 10px;
-    flex-direction: column;
     align-items: center;
 }
 .transmission-player span {
